# word2cin

./: README.md  pyproject.toml
src/: main.py
src/word2cin/: cin_entry.py  cin_printer.py  config.yaml  config_loader.py
src/word2cin/parsers/: __init__.py  parse_bun5_peh_im_phrase.py  parse_khiunn_khau2_tsha_phrase.py  parse_method_base.py  parse_one_to_one.py  parse_simple_phrase.py  parse_single_word.py  parse_single_word_from_phrase.py
src/word2cin/post_processing/: __init__.py  add_no_tone.py  convert_key_to_lower_case.py  post_processing_base.py
src/word2cin/processors/: __init__.py  lib.py  process_chhoe_taigi.py  process_gsheet.py
tests/: test_process_chhoe_taigi.py
